# WiiIR

./: .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  LICENSE  Makefile  README.md
ImGUI_RenderPatchWii/: Implementation.cpp
ImGUI_RenderPatchWii/backends/: imgui_impl_sdlrenderer2.cpp
buildWin/: CMakeCache.txt
data/: CREDITS.txt
include/: ImGuiFileDialogConfig.h  ffmpeg_mem2_alloc.h
include/WiiIR/: IR.hpp
irdb/: IRDB_About.md  custom_maps.xml  flipper_pronto.py  make.py
source/: FFMemory.c  OSReporter.cpp  ThemeLoader.cpp  irdb.cpp  main.cpp  posix_stubs.c  utils.cpp
source/protocols/: NEC_and_NECext.c  controller.c  jvc.c  pronto.c  samsung32.c  sony_sirc.c
tools/: bin2c.py  wavtool.py
